--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <title>Doggy Stickers</title>
   <link href="/styles/bootstrap.min.css" rel="stylesheet">
   <style>
+    #stickers {
+      columns: auto 200px;
+      margin: 0 auto;
+    }
     .sticker {
       border-radius: .25rem;
-      width: 216px;
-      height: 216px;
       text-align: center;
       transition-duration: .25s;
       cursor: pointer;
@@ -20,8 +22,9 @@
       transform: scale(1.25);
     }
     .sticker img {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
     .alert {
       width: 20rem;
@@ -64,7 +67,7 @@
     </div>
     <div class="row">
       <div class="col-lg-9 mb-3">
-        <div id="stickers" class="d-flex flex-wrap align-items-center">
+        <div id="stickers">
         </div>
       </div>
       <div class="col-lg-3 mb-3">
