--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   <title>Doggy Stickers</title>
   <link href="/styles/bootstrap.min.css" rel="stylesheet">
   <style>
-    #stickers {
-      columns: auto 200px;
-      margin: 0 auto;
-    }
     .sticker {
+      height: calc(8rem + 2 * .5rem);
+      width: auto;
       border-radius: .25rem;
       text-align: center;
       transition-duration: .25s;
@@ -20,11 +18,13 @@
     }
     .sticker:hover {
       transform: scale(1.25);
+      z-index: 1;
+      box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
     }
     .sticker img {
-      width: 100%;
       height: 100%;
-      object-fit: cover;
+      width: auto;
+      border-radius: .25rem;
     }
     .alert {
       width: 20rem;
@@ -67,7 +67,7 @@
     </div>
     <div class="row">
       <div class="col-lg-9 mb-3">
-        <div id="stickers">
+        <div id="stickers" class="d-flex flex-wrap justify-content-center justify-content-lg-start stickers">
         </div>
       </div>
       <div class="col-lg-3 mb-3">
