Split csv tags data into different files, udpate sticker tags

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="container mb-5">
     <h1 class="py-5">Doggy Stickers</h1>
     <div class="mb-5">
-      <input type="text" class="form-control" id="searchinput" placeholder="Tìm sticker...">
+      <input type="text" class="form-control" id="searchinput" placeholder="Find stickers...">
     </div>
     <div class="row">
       <div class="col-lg-9 mb-3">
@@ -82,7 +82,7 @@
       <use xlink:href="#check-circle-fill"/>
     </svg>
     <div>
-      Đã sao chép sticker!
+      Sticker copied!
     </div>
   </div>
   
