--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="doggy, sticker, doge, cheems, pepe, search, find, copy, choose, send, online">
+  <meta name="author" content="memorileak">
+  <meta name="description" content="Doggy Stickers is a small tool which helps you search, choose and send Doge, Cheems, Pepe and several other meme stickers to your friend. This works on all instant messaging platforms with image sending support.">
   <title>Doggy Stickers</title>
   <link href="/styles/bootstrap.min.css" rel="stylesheet">
   <link href="/styles/jquery-ui.min.css" rel="stylesheet">
@@ -76,17 +79,25 @@
   </svg>
 
   <div class="container mb-5">
-    <h1 class="py-5">Doggy Stickers</h1>
-    <div class="mb-5">
-      <input type="text" class="form-control" id="searchinput" placeholder="Find stickers...">
+    <div class="py-5 d-flex flex-wrap align-items-center justify-content-between">
+      <h1 class="mb-2 mb-sm-0">
+        Doggy Stickers
+      </h1>
+      <a href="https://github.com/memorileak/doggy-stickers" target="_blank" rel="noopener noreferrer" role="button" title="GitHub memorileak" class="btn btn-light">
+        <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 499.36" role="img">
+          <path fill="currentColor" fill-rule="evenodd" d="M256 0C114.64 0 0 114.61 0 256c0 113.09 73.34 209 175.08 242.9 12.8 2.35 17.47-5.56 17.47-12.34 0-6.08-.22-22.18-.35-43.54-71.2 15.49-86.2-34.34-86.2-34.34-11.64-29.57-28.42-37.45-28.42-37.45-23.27-15.84 1.73-15.55 1.73-15.55 25.69 1.81 39.21 26.38 39.21 26.38 22.84 39.12 59.92 27.82 74.5 21.27 2.33-16.54 8.94-27.82 16.25-34.22-56.84-6.43-116.6-28.43-116.6-126.49 0-27.95 10-50.8 26.35-68.69-2.63-6.48-11.42-32.5 2.51-67.75 0 0 21.49-6.88 70.4 26.24a242.65 242.65 0 0 1 128.18 0c48.87-33.13 70.33-26.24 70.33-26.24 14 35.25 5.18 61.27 2.55 67.75 16.41 17.9 26.31 40.75 26.31 68.69 0 98.35-59.85 120-116.88 126.32 9.19 7.9 17.38 23.53 17.38 47.41 0 34.22-.31 61.83-.31 70.23 0 6.85 4.61 14.81 17.6 12.31C438.72 464.97 512 369.08 512 256.02 512 114.62 397.37 0 256 0z" fill-opacity="0.85"></path>
+        </svg>
+        <i class="bi bi-github"></i> memorileak
+      </a>
     </div>
     <div class="row">
-      <div class="col-lg-9 mb-3">
-        <div id="stickers" class="d-flex flex-wrap justify-content-center justify-content-lg-start stickers">
+      <div class="col-lg-3 mb-3">
+        <input type="text" class="mb-3 form-control" id="searchinput" placeholder="Find stickers...">
+        <div id="alltags" class="d-none d-lg-flex flex-wrap align-items-center">
         </div>
       </div>
-      <div class="col-lg-3 mb-3">
-        <div id="alltags" class="d-flex flex-wrap align-items-center">
+      <div class="col-lg-9 mb-3">
+        <div id="stickers" class="d-flex flex-wrap justify-content-center justify-content-lg-start stickers">
         </div>
       </div>
     </div>
